Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95932

Creator not building with Quick 3D dev due to camera changes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.3
    • Quick: 3D
    • None
    • d1d5f47bda6a1435499be8516a7491e11b145ff

    Description

      After Quick3D change https://codereview.qt-project.org/c/qt/qtquick3d/+/364261 building Creator causes:

      C:\Users\kgron\work\sources\qt-creator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\mousearea3d.cpp(821): error C2039: 'cameraNode': is not a member of 'QQuick3DCamera'
      C:\qt6-install\include\QtQuick3D\6.2.0\QtQuick3D/private/qquick3dviewport_p.h(56): note: see declaration of 'QQuick3DCamera'
      C:\Users\kgron\work\sources\qt-creator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\mousearea3d.cpp(1025): error C2039: 'cameraNode': is not a member of 'QQuick3DCamera'
      C:\qt6-install\include\QtQuick3D\6.2.0\QtQuick3D/private/qquick3dviewport_p.h(56): note: see declaration of 'QQuick3DCamera'
      [23/779] Building CXX object src\tools\qml2puppet\CMakeFil...2puppet\instances\qt5informationnodeinstanceserver.cpp.obj
      ninja: build stopped: subcommand failed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes